// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Customers with financial accounts and credit limits.
Item: Order items with product details and pricing.
Order: Customer orders, including shipments.
Product: Products available for sale with unit price.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    credit_limit INTEGER 
    balance INTEGER 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price INTEGER 
    amount INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_shipped DATE 
    amount_total INTEGER 
    notes VARCHAR 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    unit_price INTEGER 
    }



// Relationships
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
